# dexfans

./: Cargo.toml  README.md  authorize_asset_canister.sh  deploy_local.sh  dfx.json  generate_did.sh  start.sh
.github/workflows/: checks.yml  rust.yml
pratap_scripts/deployment/: local_deployment.sh
scripts/: main.sh
scripts/deployment/: add_wasm.sh  local_deployment.sh  main_deployment.sh  playground_deployment.sh
src/backend/core/: Cargo.toml
src/backend/core/src/: constants.rs  functions.rs  lib.rs  types.rs
src/backend/ic_asset_handler/ic_oss_cluster/: Cargo.toml
src/backend/ic_asset_handler/ic_oss_cluster/src/: api_admin.rs
src/backend/ic_asset_handler/ic_oss_types/: Cargo.toml
src/backend/index_canister/: Cargo.toml  index_canister.did
src/backend/index_canister/src/: lib.rs
src/backend/index_canister/src/apis/queries/: apis.rs
src/backend/index_canister/src/apis/updates/: apis.rs  apis_canister.rs  apis_ic.rs  controllers.rs  payment_controller.rs
src/backend/index_canister/src/models/: mod.rs  types.rs
src/backend/index_canister/src/store/: memory.rs  storage_state.rs
src/backend/index_canister/src/utils/: canister_management.rs  challanges.rs  functions.rs  guards.rs  init.rs  mod.rs
src/backend/post_canister/: Cargo.toml  post_canister.did
src/backend/post_canister/src/: lib.rs
src/backend/post_canister/src/apis/queries/: apis.rs  apis_ic.rs  mod.rs
src/backend/post_canister/src/apis/updates/: apis.rs  mod.rs  post_controller.rs  validators.rs
src/backend/post_canister/src/models/: comment.rs  notification.rs  post.rs  types.rs
src/backend/post_canister/src/store/: memory.rs  storage_state.rs
src/backend/post_canister/src/utils/: functions.rs  guards.rs  init.rs
src/backend/remote_canisters/: icp_ledger.did
src/core/: Cargo.toml
src/core/src/: constants.rs  types.rs
src/dexfans_backend/: Cargo.toml  dexfans_backend.did
src/dexfans_backend/src/: lib.rs
src/dexfans_backend/src/api/queries/: accounts_queries_api.rs  apis.rs  mod.rs  post.rs
src/dexfans_backend/src/api/updates/: accounts_controller.rs  accounts_update_api.rs  apis.rs  apis_canister.rs  apis_ic.rs  canister_update.rs  controllers.rs  mod.rs
src/dexfans_backend/src/models/: comment.rs  mod.rs  pagination.rs  post.rs  post_storage.rs  types.rs  user.rs  user_types.rs
src/dexfans_backend/src/store/: memory.rs  mod.rs  storage_state.rs
src/dexfans_backend/src/utils/: constants.rs  functions.rs  guards.rs  mod.rs
src/dexfans_types/: Cargo.toml
src/dexfans_types/src/: constants.rs  types.rs
src/ic_asset_handler/ic_oss_bucket/: Cargo.toml
src/ic_asset_handler/ic_oss_types/: Cargo.toml
src/index_canister/: Cargo.toml  index_canister.did
src/index_canister/src/: lib.rs
src/index_canister/src/api/queries/: apis.rs
src/index_canister/src/api/updates/: apis.rs  apis_ic.rs  controllers.rs  mod.rs  payment_controller.rs
src/index_canister/src/apis/queries/: apis.rs
src/index_canister/src/apis/updates/: apis.rs  apis_canister.rs  apis_ic.rs  controllers.rs  mod.rs
src/index_canister/src/models/: mod.rs  types.rs
src/index_canister/src/store/: storage_state.rs
src/index_canister/src/utils/: canister_management.rs  functions.rs  guards.rs  init.rs  mod.rs
src/msgpack/: Cargo.toml
src/post_canister/: Cargo.toml  post_canister.did
src/post_canister/src/: lib.rs
src/post_canister/src/api/queries/: accounts_queries_api.rs  api_post.rs  apis.rs  list_subscribers.rs  mod.rs  post.rs
src/post_canister/src/api/updates/: api_canister.rs  api_post.rs  apis.rs  mod.rs  post.rs  post_controller.rs  subscription.rs  subscription_controllers.rs
src/post_canister/src/apis/queries/: apis.rs  mod.rs
src/post_canister/src/apis/updates/: api_canister.rs  apis.rs  mod.rs  post_controller.rs
src/post_canister/src/models/: comment.rs  mod.rs  notification.rs  post.rs  post_storage.rs  types.rs  user.rs
src/post_canister/src/store/: memory.rs  mod.rs  storage_state.rs
src/post_canister/src/utils/: constants.rs  functions.rs  guards.rs  init.rs  mod.rs
src/remote_canisters/wasm_asset_canister/: ic_asset_handler.did  ic_asset_handler.wasm
tests/: bulk_post_creation.sh  create_account.sh  create_new_post.sh  create_post.sh  get_my_account.sh  get_my_notification.sh  inter_canister.sh  single_acc.sh  subscribe.sh  test_payment.sh  test_post_purchase.sh  update_profile.sh
upload_js/: package-lock.json  upload.js
