[workspace]
members = [
    "src/index_canister","src/post_canister", "src/ic_asset_handler/ic_oss_bucket", "src/ic_asset_handler/ic_oss_types", "src/core",
]
resolver = "2"


[workspace.package]
version = "0.9.3"
edition = "2021"
keywords = ["file", "storage", "oss", "s3", "icp"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytes = "1"
base64 = "0.21"
candid = "0.10"
ciborium = "0.2"
futures = "0.3"
serde = "1"
rand = "0.7.3"
serde_json = "1.0"
serde_bytes = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
num-traits = "0.2"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
ic-stable-structures = "0.6"
ic-http-certification = { version = "2.6", features = ["serde"] }
ic-agent = "0.38"
anyhow = "1"
crc32fast = "1.4"
url = "2.5"
wasm-bindgen = "0.2.92"
once_cell = "1.20"
# getrandom = { version = "0.2.3", features = ["js"] }
getrandom = { version = "0.2", features = ["custom"] }
kaires = { git = "https://github.com/wantedbear007/kaires", rev = "772f3b13bec4df2862fdf1aaba95cf7d629ca9cd" }
core = {path = "src/core", version = "*"}
icrc-ledger-types = "0.1.5"