[package]
name = "dexfans_backend"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
# candid-extractor = "0.1.2"
serde = { workspace = true }
ciborium = { workspace = true }
dexfans_types = { workspace = true }
kaires ={ workspace = true}