[package]
name = "post_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
candid-extractor = "0.1.2"
serde_bytes = "0.11.14"
sha2 = "0.9.8"
kaires = { git = "https://github.com/wantedbear007/kaires", rev = "9d57f926418efcbbb47d2c2e34f1f3465d4f7cc8" }


[features]
dev_mode = []