[package]
name = "post_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
serde_json = { workspace = true }
# candid-extractor = "0.1.2"
sha2 = { workspace = true }
kaires = { workspace = true }
rand = "0.7.3"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2.3", features = ["js"] }
dexfans_types = { workspace = true }

[features]
dev_mode = []
