[package]
name = "index_canister"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
core = { workspace = true }
kaires = { workspace = true }
icrc-ledger-types = { workspace = true }
rand = { workspace = true }
ic-captcha = { workspace = true }
ic-cdk-timers = {workspace = true}

[features]
default = []
debug = []
