[package]
name = "post_canister"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
kaires = { workspace = true }
rand = { workspace = true }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true }
core = { workspace = true }
validator = { workspace = true }

[features]
dev_mode = []
