[package]
name = "ic_oss_bucket"
publish = false
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
ic-stable-structures = { workspace = true }
ic-http-certification = { workspace = true }
getrandom = { workspace = true }
lazy_static = {workspace = true}
hyperx = { git = "https://github.com/ldclabs/hyperx", rev = "4b9bd373b8c4d29a32e59912bf598ba69273c032" }
ic-oss-types = { path = "../ic_oss_types", version = "0.9" }
