[package]
name = "ic-oss-types"
publish = true
version.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
crc32fast = { workspace = true }
num-traits = { workspace = true }
url = { workspace = true }
ciborium = { workspace = true }
icrc-ledger-types = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
coset = "0.3.8"
